// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMP Korean Live Radio Page A11y I can see the skip to content link 1`] = `"내용 보기"`;

exports[`AMP Korean Live Radio Page AMP Consent config 1`] = `
{
  "consents": {
    "user-consent": {
      "promptIfUnknownForGeoGroup": "eea",
      "promptUI": "consent-prompt",
    },
  },
  "policy": {
    "default": {
      "timeout": {
        "fallbackAction": "reject",
        "seconds": 0,
      },
      "waitFor": {
        "user-consent": [],
      },
    },
  },
}
`;

exports[`AMP Korean Live Radio Page AMP Geo config 1`] = `
{
  "AmpBind": true,
  "ISOCountryGroups": {
    "eea": [
      "at",
      "ax",
      "be",
      "bg",
      "bl",
      "cy",
      "cz",
      "de",
      "dk",
      "ea",
      "ee",
      "es",
      "fi",
      "fr",
      "gb",
      "gf",
      "gg",
      "gi",
      "gp",
      "gr",
      "hr",
      "hu",
      "ic",
      "ie",
      "im",
      "is",
      "it",
      "je",
      "li",
      "lt",
      "lu",
      "lv",
      "mf",
      "mq",
      "mt",
      "nc",
      "nl",
      "no",
      "pf",
      "pl",
      "pm",
      "pt",
      "re",
      "ro",
      "se",
      "si",
      "sj",
      "sk",
      "tf",
      "va",
      "wf",
      "yt",
    ],
    "gbOrUnknown": [
      "gb",
      "gg",
      "im",
      "je",
      "uk",
      "unknown",
    ],
  },
}
`;

exports[`AMP Korean Live Radio Page Analytics ATI 1`] = `
{
  "requests": {
    "base": "https://logws1363.ati-host.net?",
    "pageview": "\${base}s=598343&s2=57&p=korean.bbc_korean_radio.liveradio.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x1=[urn%3Abbc%3Aares%3Aws_media%3Alive%3Abbc_korean_radio]&x2=[amp]&x3=[news-korean]&x4=[ko]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[player-live]&x8=[simorgh]&x9=[BBC%2520%EC%BD%94%EB%A6%AC%EC%95%84%2520%EB%9D%BC%EB%94%94%EC%98%A4%2520-%2520BBC%2520News%2520%EC%BD%94%EB%A6%AC%EC%95%84]&ref=\${documentReferrer}",
  },
  "transport": {
    "beacon": false,
    "image": true,
    "xhrpost": false,
  },
  "triggers": {
    "trackPageview": {
      "on": "visible",
      "request": "pageview",
    },
  },
}
`;

exports[`AMP Korean Live Radio Page Analytics chartbeat 1`] = `
{
  "vars": {
    "contentType": "player-live",
    "domain": "test.bbc.co.uk",
    "sections": "Korean, Korean - Radio",
    "title": "BBC 코리아 라디오 - BBC News 코리아",
    "uid": 50924,
    "virtualReferrer": "\${documentReferrer}",
  },
}
`;

exports[`AMP Korean Live Radio Page Analytics comscore 1`] = `
{
  "extraUrlParams": {
    "comscorekw": "amp",
  },
  "vars": {
    "c2": "17986528",
  },
}
`;

exports[`AMP Korean Live Radio Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, 코리아",
  "url": "/korean",
}
`;

exports[`AMP Korean Live Radio Page Footer Anchors should match text and url 2`] = `
{
  "text": "BBC News를 신뢰할 수 있는 이유",
  "url": "https://www.bbc.com/korean/institutional-49283197",
}
`;

exports[`AMP Korean Live Radio Page Footer Anchors should match text and url 3`] = `
{
  "text": "이용 약관",
  "url": "https://www.bbc.com/usingthebbc/terms/",
}
`;

exports[`AMP Korean Live Radio Page Footer Anchors should match text and url 4`] = `
{
  "text": "BBC 소개",
  "url": "https://www.bbc.com/aboutthebbc",
}
`;

exports[`AMP Korean Live Radio Page Footer Anchors should match text and url 5`] = `
{
  "text": "개인정보취급방침",
  "url": "https://www.bbc.com/usingthebbc/privacy/",
}
`;

exports[`AMP Korean Live Radio Page Footer Anchors should match text and url 6`] = `
{
  "text": "쿠키정책",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`AMP Korean Live Radio Page Footer Anchors should match text and url 7`] = `
{
  "text": "고객센터",
  "url": "https://www.bbc.co.uk/korean/send/u50853423",
}
`;

exports[`AMP Korean Live Radio Page Footer Anchors should match text and url 8`] = `
{
  "text": "외부 링크에 대한 본사 정책 보기",
  "url": "https://www.bbc.com/editorialguidelines/guidance/feeds-and-links",
}
`;

exports[`AMP Korean Live Radio Page Footer Cookie Settings Button should match text and on handler 1`] = `
{
  "on": "tap:consent.prompt, privacy.hide, cookie.show, AMP.setState({ isManagingSettings: true })",
  "text": "Do not share or sell my info",
}
`;

exports[`AMP Korean Live Radio Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/korean"`;

exports[`AMP Korean Live Radio Page Footer Paragraphs should match text 1`] = `"© 2024 BBC. BBC는 외부 사이트 및 타사 콘텐츠에 대한 책임을 지지 않습니다 외부 링크에 대한 본사 정책 보기"`;

exports[`AMP Korean Live Radio Page Header I can see the branding 1`] = `"BBC News, 코리아"`;

exports[`AMP Korean Live Radio Page Header Navigation link should match text and url 1`] = `
{
  "text": "뉴스",
  "url": "/korean",
}
`;

exports[`AMP Korean Live Radio Page Header Navigation link should match text and url 2`] = `
{
  "text": "비디오",
  "url": "/korean/topics/cnwng7v0e54t",
}
`;

exports[`AMP Korean Live Radio Page Header Navigation link should match text and url 3`] = `
{
  "text": "라디오",
  "url": "/korean/bbc_korean_radio/programmes/w13xttll",
}
`;

exports[`AMP Korean Live Radio Page Header Navigation link should match text and url 4`] = `
{
  "text": "다운로드",
  "url": "/korean/downloads",
}
`;

exports[`AMP Korean Live Radio Page Header Navigation link should match text and url 5`] = `
{
  "text": "TOP 뉴스",
  "url": "/korean/popular/read",
}
`;

exports[`AMP Korean Live Radio Page Main heading should match text 1`] = `"BBC 코리아 라디오"`;

exports[`AMP Korean Live Radio Page Media Player a11y assistive technology can read the media player title 1`] = `"오디오 플레이어"`;

exports[`AMP Korean Live Radio Page Media Player iframe with valid URL should be rendered 1`] = `"https://polling.test.bbc.co.uk/ws/av-embeds/media/bbc_korean_radio/liveradio/ko/amp?morph_env=live"`;

exports[`AMP Korean Live Radio Page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7080/korean/images/icons/icon-192x192.png",
}
`;

exports[`AMP Korean Live Radio Page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/icons/icon-72x72.png",
}
`;

exports[`AMP Korean Live Radio Page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/icons/icon-96x96.png",
}
`;

exports[`AMP Korean Live Radio Page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/icons/icon-128x128.png",
}
`;

exports[`AMP Korean Live Radio Page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/icons/icon-144x144.png",
}
`;

exports[`AMP Korean Live Radio Page SEO Apple Touch Icon should match attributes 6`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/icons/icon-152x152.png",
}
`;

exports[`AMP Korean Live Radio Page SEO Apple Touch Icon should match attributes 7`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/icons/icon-180x180.png",
}
`;

exports[`AMP Korean Live Radio Page SEO Apple Touch Icon should match attributes 8`] = `
{
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/icons/icon-192x192.png",
}
`;

exports[`AMP Korean Live Radio Page SEO Apple Touch Icon should match attributes 9`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/icons/icon-384x384.png",
}
`;

exports[`AMP Korean Live Radio Page SEO Apple Touch Icon should match attributes 10`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/icons/icon-512x512.png",
}
`;

exports[`AMP Korean Live Radio Page SEO Canonical link 1`] = `"http://localhost:7080/korean/bbc_korean_radio/liveradio"`;

exports[`AMP Korean Live Radio Page SEO Dir attribute 1`] = `"ltr"`;

exports[`AMP Korean Live Radio Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`AMP Korean Live Radio Page SEO Heading level 1 1`] = `"BBC 코리아 라디오"`;

exports[`AMP Korean Live Radio Page SEO Lang attribute 1`] = `"ko"`;

exports[`AMP Korean Live Radio Page SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "RadioChannel",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/korean.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "ko",
        "name": "Korean",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7080/korean/bbc_korean_radio/liveradio",
        "@type": "WebPage",
        "name": "BBC 코리아 라디오",
      },
      "url": "http://localhost:7080/korean/bbc_korean_radio/liveradio",
    },
  ],
}
`;

exports[`AMP Korean Live Radio Page SEO OG description 1`] = `"세계와 한반도 뉴스를 공정하고 객관적으로 전달해 드립니다"`;

exports[`AMP Korean Live Radio Page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/korean.png"`;

exports[`AMP Korean Live Radio Page SEO OG image alt 1`] = `"BBC News 코리아"`;

exports[`AMP Korean Live Radio Page SEO OG locale 1`] = `"ko-KO"`;

exports[`AMP Korean Live Radio Page SEO OG site name 1`] = `"BBC News 코리아"`;

exports[`AMP Korean Live Radio Page SEO OG title 1`] = `"BBC 코리아 라디오 - BBC News 코리아"`;

exports[`AMP Korean Live Radio Page SEO OG type 1`] = `"website"`;

exports[`AMP Korean Live Radio Page SEO OG url 1`] = `"http://localhost:7080/korean/bbc_korean_radio/liveradio"`;

exports[`AMP Korean Live Radio Page SEO Page title 1`] = `"BBC 코리아 라디오 - BBC News 코리아"`;

exports[`AMP Korean Live Radio Page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`AMP Korean Live Radio Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`AMP Korean Live Radio Page SEO Twitter creator 1`] = `"@bbcnews"`;

exports[`AMP Korean Live Radio Page SEO Twitter description 1`] = `"세계와 한반도 뉴스를 공정하고 객관적으로 전달해 드립니다"`;

exports[`AMP Korean Live Radio Page SEO Twitter image alt 1`] = `"BBC News 코리아"`;

exports[`AMP Korean Live Radio Page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/korean.png"`;

exports[`AMP Korean Live Radio Page SEO Twitter site 1`] = `"@bbcnews"`;

exports[`AMP Korean Live Radio Page SEO Twitter title 1`] = `"BBC 코리아 라디오 - BBC News 코리아"`;

exports[`AMP Korean Live Radio Page Summary should match text 1`] = `"세계와 한반도 뉴스를 공정하고 객관적으로 전달해 드립니다"`;
